src/objects/Assessment_Legacy__c.object
<CustomObject>
    <fields>
        <fullName>Optional_Documents_Needed__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Optional Documents Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Driver’s License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Stub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Letter from last school or GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Transcripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Record Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent/ Guardian Consent Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: SA/ MH Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRT/Osborne Release Form</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Information__c</fullName>
        <label>Other Contact Information</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Education_Attended__c</fullName>
        <label>Other Education Attended</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Mental_Health_Issues__c</fullName>
        <label>Other Mental Health Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Neurodevelopmental_Disorders__c</fullName>
        <label>Other Neurodevelopmental Disorders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Phys_Health_Problem__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Other Phys Health Problem</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Risk_Category__c</fullName>
        <description>LSCMI, may apply to other assessments as well.</description>
        <label>Overall Risk Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCLC_Avoid_activities_or_situations__c</fullName>
        <inlineHelpText>Avoid activities or situations because they remind
you of a stressful experience from the past?</inlineHelpText>
        <label>Avoid activities or situations?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Avoid_thinking_about_the_past__c</fullName>
        <inlineHelpText>Avoid thinking about or talking about a stressful
experience from the past or avoid having feelings
related to it?</inlineHelpText>
        <label>Avoid thinking about the past?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Being_super_alert_or_watchful__c</fullName>
        <inlineHelpText>Being “super alert” or watchful on guard?</inlineHelpText>
        <label>Being super alert or watchful?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Disturbing_dreams__c</fullName>
        <inlineHelpText>Repeated, disturbing dreams of a stressful
experience from the past?</inlineHelpText>
        <label>Disturbing dreams?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Disturbing_memories_thoughts__c</fullName>
        <inlineHelpText>Repeated, disturbing memories, thoughts, or images
of a stressful experience from the past?</inlineHelpText>
        <label>Disturbing memories, thoughts or images?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Feeling_distant_or_cut_off__c</fullName>
        <inlineHelpText>Feeling distant or cut off from other people?</inlineHelpText>
        <label>Feeling distant or cut off?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Feeling_emotionally_numb__c</fullName>
        <inlineHelpText>Feeling emotionally numb or being unable to have
loving feelings for those close to you?</inlineHelpText>
        <label>Feeling emotionally numb?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Feeling_irritable__c</fullName>
        <inlineHelpText>Feeling irritable or having angry outbursts?</inlineHelpText>
        <label>Feeling irritable?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Feeling_jumpy_or_easily_startled__c</fullName>
        <inlineHelpText>Feeling jumpy or easily startled?</inlineHelpText>
        <label>Feeling jumpy or easily startled?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Future_cut_short__c</fullName>
        <inlineHelpText>Feeling as if your future will somehow be cut short?</inlineHelpText>
        <label>Future cut short?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Having_difficulty_concentrating__c</fullName>
        <inlineHelpText>Having difficulty concentrating?</inlineHelpText>
        <label>Having difficulty concentrating?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Having_physical_reactions__c</fullName>
        <inlineHelpText>Having physical reactions (e.g., heart pounding,
trouble breathing, or sweating) when something
reminded you of a stressful experience from the
past?</inlineHelpText>
        <label>Having physical reactions?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Loss_of_interest__c</fullName>
        <inlineHelpText>Loss of interest in things that you used to enjoy?</inlineHelpText>
        <label>Loss of interest?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Reliving_a_stressful_experience__c</fullName>
        <inlineHelpText>Suddenly acting or feeling as if a stressful experience
were happening again (as if you were reliving it)?</inlineHelpText>
        <label>Reliving a stressful experience?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Trouble_falling_or_staying_asleep__c</fullName>
        <inlineHelpText>Trouble falling or staying asleep?</inlineHelpText>
        <label>Trouble falling or staying asleep?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Trouble_remembering__c</fullName>
        <inlineHelpText>Trouble remembering important parts of a stressful
experience from the past?</inlineHelpText>
        <label>Trouble remembering?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Upset_when_reminded_of_the_past__c</fullName>
        <inlineHelpText>Feeling very upset when something reminded you of
a stressful experience from the past?</inlineHelpText>
        <label>Upset when reminded of the past?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PTSD_Severity_Score__c</fullName>
        <formula>value(text(UCLA_S3Q1_I_watch_out_for_danger__c))
+ value(text( UCLA_S3Q2_I_get_upset_when_reminded__c ))
+ value(text( UCLA_S3Q3_Memories_come_to_mind__c ))

+ max(value(text( UCLA_S3Q4_I_feel_angry__c )), value(text( UCLA_S3Q20_I_have_arguments_or_fights__c  )))

+ value(text( UCLA_S3Q5_I_have_bad_dreams__c ))
+ value(text( UCLA_S3Q6_I_feel_I_relive_experience__c ))
+ value(text( UCLA_S3Q7_I_feel_like_staying_by_myself__c ))
+ value(text( UCLA_S3Q8_I_feel_alone__c ))
+ value(text( UCLA_S3Q9_I_try_not_to_talk_or_think__c ))

+ max(value(text( UCLA_S3Q10_I_have_trouble_feeling_happy__c )), value(text( UCLA_S3Q11_Trouble_feeling_sadness_anger__c )))

+ value(text( UCLA_S3Q12_I_feel_jumpy__c  ))
+ value(text( UCLA_S3Q13_I_have_trouble_sleeping__c  ))
+ value(text( UCLA_S3Q15_Cant_remember_important_parts__c ))
+ value(text( UCLA_S3Q16_I_have_trouble_concentrating__c ))
+ value(text( UCLA_S3Q17_I_avoid_things_that_remind_me__c ))
+ value(text( UCLA_S3Q18_I_have_physical_reactions__c ))

+ max(value(text( UCLA_S3Q19_I_think_I_won_t_live_long__c )), value(text( UCLA_S3Q21_I_feel_worried_about_future__c  )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTSD Severity Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_C_ID__c</fullName>
        <formula>Contact__r.P_C_ID__c</formula>
        <label>P/C ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian__c</fullName>
        <label>Parent/Guardian</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parents_Mobile__c</fullName>
        <label>Parent&apos;s Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partial_PTSD_Diagnosis_Likely__c</fullName>
        <defaultValue>false</defaultValue>
        <description>populated via workflow due to compile size</description>
        <label>Partial PTSD Diagnosis Likely</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_forced_you_to_do_something__c</fullName>
        <inlineHelpText>Has your intimate partner ever forced you to do something you did not want to do?</inlineHelpText>
        <label>Partner forced you to do something?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_hurt_pets_destroyed_objects__c</fullName>
        <inlineHelpText>Has your intimate partner ever hurt your pets or destroyed your clothing, objects in your home, or something you especially cared about?</inlineHelpText>
        <label>Partner hurt pets/destroyed objects?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Strengths__c</fullName>
        <inlineHelpText>Q: What do you consider your strengths as a person, as a student, and as a worker?</inlineHelpText>
        <label>Personal Strengths</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Health_Section_1__c</fullName>
        <label>Physical Health Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prescribe_take_med_to_treat_MH_problem__c</fullName>
        <label>Prescribe/take med to treat MH problem?</label>
        <picklist>
            <picklistValues>
                <fullName>Currently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the last 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5 years ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Present_past_school_suspension__c</fullName>
        <label>Present/past school suspension?</label>
        <picklist>
            <picklistValues>
                <fullName>Currently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the Past</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <description>Display address in easy to read format</description>
        <formula>Building_No__c &amp;&apos; &apos;&amp;Street__c&amp;if(not(isblank(Apt_No__c)),&quot; - Apt &quot;&amp;Apt_No__c,&apos; &apos;)&amp;BR()&amp; 
City__c&amp;&apos;, &apos;&amp;State__c&amp;&apos; &apos;&amp; Zip_Code__c &amp;BR()&amp; 
Neighborhood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cannot update here.</inlineHelpText>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pulse__c</fullName>
        <label>Pulse</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_School_Other__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Reason for Leaving School (Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_School__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Reason for Leaving School</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_a_Superintendent_s_suspension__c</fullName>
        <label>Received a Superintendent&apos;s suspension?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrals_Made_YN__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Were referrals made for service?</inlineHelpText>
        <label>Referrals Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrals_Made__c</fullName>
        <label>Referrals Made To:</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referrals_Not_Made__c</fullName>
        <label>Referrals Not Made Because:</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relation_To_Client__c</fullName>
        <label>Relation To Client</label>
        <picklist>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt/Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girl/Boy Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_Documents__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Required Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Social Security Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptance Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant Consent Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consent form for Photographs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <label>Residence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Respiratory_rate__c</fullName>
        <inlineHelpText>Please enter the client&apos;s recorded respiratory rate per minute</inlineHelpText>
        <label>Respiratory rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Category_at_Intake__c</fullName>
        <description>Select score from LSCMI or LSIRV</description>
        <formula>IF ( LSI_R_SV_Score__c &gt; 0, TEXT(LSIRSV_Original_Assessment__c), Overall_Risk_Category__c)</formula>
        <label>Risk Category at Intake</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_End_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_GED_Enrollment_at_Intake__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School/HSE Enrollment at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Attended in Past Two Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled but Not Attending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Institution_Hours_from_and_to__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School/Institution Hours (from and to)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Last_Attended__c</fullName>
        <label>School Last Attended</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Start_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Recommendations__c</fullName>
        <label>Service Recommendations</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Six_Month_Goals__c</fullName>
        <inlineHelpText>Question: What goals do you have for yourself 6 months from now?</inlineHelpText>
        <label>Six Month Goals</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Smoking_information__c</fullName>
        <inlineHelpText>If client currently smokes, please enter the date of their most recent attempt to quit, and the number of years they have smoked.</inlineHelpText>
        <label>Smoking information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Smoking_status__c</fullName>
        <label>Smoking status</label>
        <picklist>
            <picklistValues>
                <fullName>Current smoker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former smoker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never smoked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <label>Social</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spiritual_Identity__c</fullName>
        <inlineHelpText>Q: What is your spiritual identification/life philosophy, and to what extent is it important to you?</inlineHelpText>
        <label>Spiritual Identity</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Street</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_Section_1__c</fullName>
        <label>Substance Abuse Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_at_Interview__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Substance Abuse at Interview</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Recommendations_Section_1__c</fullName>
        <label>Summary &amp; Recommendations Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>